--- a/social-media-blog-app-rav1/pom.xml
+++ b/social-media-blog-app-rav1/pom.xml
@@ -101,6 +101,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- ModelMapper for entity-DTO mapping -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
